@@ -1,1 +1,3 @@
 # AD_ENTREGAS
+
+Add VM options: --module-path "C:\Program Files\Java\javafx-sdk-23\lib" --add-modules javafx.controls,javafx.fxml
